fixed the gap between article banner and columns

--- a/docroot/themes/custom/ucsf/assets/css/style.css
+++ b/docroot/themes/custom/ucsf/assets/css/style.css
@@ -7511,10 +7511,14 @@ h2.font-h3 {
   height: -webkit-min-content;
   height: -moz-min-content;
   height: min-content; }
-  .article-meta-share ~ .page_narrow:empty + [class*="layout-columns"] {
-    grid-row: 2; }
+
+.article-meta-share ~ .page_narrow:empty + [class*="layout-columns"] {
+  grid-row: 2; }
 
 .article-meta-share + [class*="layout-columns"] {
+  grid-row: 1; }
+
+.article-header + .article-meta-share + [class*="layout-columns"] {
   grid-row: 2; }
 
 .page-node-type-article .main,
